force-app/main/default/objects/pymtTest__Transaction__c/pymtTest__Transaction__c.object-meta.xml
<CustomObject>
    <description>Represents a payment transaction (sale, refund, void, etc.)</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TXN-{0000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>