force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Account__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account associated with this transaction</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>