force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Fulfillment_Error__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Fulfillment_Error__c</fullName>
    <label>Fulfillment Error</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Error message if Order/Invoice creation failed</description>
    <inlineHelpText>Contains error details if the automatic Order/Invoice creation failed</inlineHelpText>
</CustomField>