force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Gateway_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Gateway_Transaction_Id__c</fullName>
    <description>Transaction ID returned by the payment gateway</description>
    <externalId>true</externalId>
    <label>Gateway Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>