force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Last_Sync_Date__c</fullName>
    <description>Last time the transaction status was synchronized with the gateway</description>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>