force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment gateway used for this transaction</description>
    <label>Payment Gateway</label>
    <referenceTo>pymtTest__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>