force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Payment_Type__c</fullName>
    <description>Type of payment (Credit Card, ACH, etc.)</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
                <default>true</default>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>eCheck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>