force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Response_Message__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Response_Message__c</fullName>
    <description>Response message from the payment gateway</description>
    <label>Response Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>