force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Return_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Return_Reason_Code__c</fullName>
    <description>ACH return reason code (R01, R02, etc.) if the transaction was returned</description>
    <label>Return Reason Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>