force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>The channel through which this transaction originated</description>
    <inlineHelpText>Select the channel where this payment was captured</inlineHelpText>
</CustomField>