force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Settlement_Date__c</fullName>
    <description>Date when the transaction was settled</description>
    <label>Settlement Date</label>
    <type>DateTime</type>
</CustomField>