force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Settlement_Status__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Settlement_Status__c</fullName>
    <description>Settlement status of the transaction (especially important for ACH)</description>
    <label>Settlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Pending Settlement</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Settlement Error</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>