force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Source_Description__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Source_Description__c</fullName>
    <label>Source Description</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Agent notes, call reference, or other context about the transaction</description>
    <inlineHelpText>Enter any notes or reference information about this transaction</inlineHelpText>
</CustomField>