force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Status__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Status__c</fullName>
    <description>Current status of the transaction</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Partially Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>