force-app/main/default/objects/pymtTest__Transaction__c/fields/pymtTest__Type__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Type__c</fullName>
    <description>Type of transaction</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
                <default>true</default>
                <label>Sale</label>
            </value>
            <value>
                <fullName>Authorize</fullName>
            </value>
            <value>
                <fullName>Capture</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>